[package]
name = "imapcacheproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-imap = "0.5"
imap-proto = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
